Spacing corrected

--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -878,13 +878,14 @@ footer .bottom-details .bottom_text{
 
 
 .tab{
-  color: var(--text-main);
+  color: var(--text-main) !important;
   font-family: var(--primary-font);
-  font-weight: 700;
-  font-size: large;
+  font-weight: 700 !important;
+  font-size: large !important;
 }
 .tab-1{
+  color: var(--text-main) !important;
   font-family: var(--primary-font) !important;
-  font-weight: 700;
-  font-size: medium;
+  font-weight: 700 !important;
+  font-size: medium !important;
 }
